Fix bug 97620 [r=rpotts, sr=brendan/ben] Added code to doom and clear active cache entries when devices are shutdown.

Fix bug 88768 [a=nisheeth], fixing unary operator usage in nsCacheEntryDescriptor.cpp.