netwerk/cache/src/nsCacheService.h
@@ -159,12 +159,18 @@ private:
     void             ClearPendingRequests(nsCacheEntry * entry);
     void             ClearDoomList(void);
     void             ClearActiveEntries(void);
+    void             DoomActiveEntries(void);
 
     static
     PLDHashOperator PR_CALLBACK  DeactivateAndClearEntry(PLDHashTable *    table,
                                                          PLDHashEntryHdr * hdr,
                                                          PRUint32          number,
                                                          void *            arg);
+    static
+    PLDHashOperator PR_CALLBACK  RemoveActiveEntry(PLDHashTable *    table,
+                                                   PLDHashEntryHdr * hdr,
+                                                   PRUint32          number,
+                                                   void *            arg);
 #if defined(PR_LOGGING)
     void LogCacheStatistics();
 #endif
